--- a/MyGame/GameProject.cbp
+++ b/MyGame/GameProject.cbp
@@ -32,7 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="bai2_sdl2_image.cpp" />
+		<Unit filename="defs.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
