click to move ball

--- a/MyGame/GameProject.cbp
+++ b/MyGame/GameProject.cbp
@@ -32,10 +32,13 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="ball.cpp" />
+		<Unit filename="ball.h" />
 		<Unit filename="defs.h" />
 		<Unit filename="graphics.cpp" />
 		<Unit filename="graphics.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="object.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
