--- a/MyGame/MyGame.cbp
+++ b/MyGame/MyGame.cbp
@@ -39,6 +39,8 @@
 		<Unit filename="graphics.h" />
 		<Unit filename="hole.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="music.cpp" />
+		<Unit filename="music.h" />
 		<Unit filename="object.cpp" />
 		<Unit filename="object.h" />
 		<Unit filename="tile.h" />
